<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <LinearLayout
            android:id="@+id/layout_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <include layout="@layout/activity_top"></include>

    </LinearLayout>


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/layout_divider_shape"
                android:orientation="vertical"
                android:showDividers="middle">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/item_margin_left"
                    android:gravity="center|left"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center|left"
                        android:text="@string/track_query_option_time"
                        android:textColor="@color/list_item_title"
                        android:textSize="14dp"/>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal"
                        android:weightSum="1">

                    <Button
                            android:id="@+id/start_time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_weight="0.5"
                            android:background="@mipmap/bg_btn_cancel"
                            android:onClick="onStartTime"
                            android:textColor="@color/layout_title"
                            android:textSize="10dp"></Button>


                    <Button
                            android:id="@+id/end_time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="0.5"
                            android:background="@mipmap/bg_btn_cancel"
                            android:onClick="onEndTime"
                            android:textColor="@color/layout_title"
                            android:textSize="10dp"></Button>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/item_margin_left"
                    android:layout_marginBottom="10dp"
                    android:gravity="center|left"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center|left"
                        android:text="@string/track_query_option_sort_type"
                        android:textColor="@color/list_item_title"
                        android:textSize="14dp"/>

                <RadioGroup
                        android:id="@+id/sort_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1"
                        android:orientation="horizontal">

                    <RadioButton
                            android:id="@+id/asc"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:minHeight="25dp"
                            android:checked="true"
                            android:text="@string/asc"
                            android:textColor="@color/list_item_desc"
                            android:textSize="12dp"
                            android:button="@drawable/radio_selector"/>

                    <RadioButton
                            android:id="@+id/desc"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:minHeight="25dp"
                            android:text="@string/desc"
                            android:textColor="@color/list_item_desc"
                            android:textSize="12dp"
                            android:button="@drawable/radio_selector"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:background="@color/light_gray"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="1">

                <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="0.5"
                        android:background="@mipmap/bg_btn_cancel"
                        android:gravity="center"
                        android:onClick="onCancel"
                        android:text="@string/all_cancel"
                        android:textColor="@color/layout_title"
                        android:textSize="14dp"/>

                <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="0.5"
                        android:background="@mipmap/bg_btn_sure"
                        android:onClick="onFinish"
                        android:text="@string/all_sure"
                        android:textColor="@color/white"
                        android:textSize="14dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

