<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="175px"
        android:background="#2f2f35"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_left"
            android:layout_width="150px"
            android:layout_height="150px"
            android:background="@drawable/ic_left"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:text="@string/txt_change_pwd"
            android:textColor="#ffffff"
            android:textSize="55px"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#222227"
        android:orientation="vertical"
        android:paddingTop="25px">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_marginLeft="40px"
            android:layout_marginRight="40px"
            android:layout_marginTop="20px"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:layout_width="150px"
                android:layout_height="match_parent"
                android:background="@drawable/ic_input_pwd"/>

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5px"
                android:layout_marginRight="20px"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_pwd_hint"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/txt_login_hint"
                android:textSize="48px"/>

            <CheckBox
                android:id="@+id/cb_pwd"
                android:layout_width="120px"
                android:layout_height="120px"
                android:button="@drawable/cb_pwd"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5px"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_marginTop="20px"
            android:background="#343339"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_marginLeft="40px"
            android:layout_marginRight="40px"
            android:layout_marginTop="20px"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:layout_width="150px"
                android:layout_height="match_parent"
                android:background="@drawable/ic_input_pwd"/>

            <EditText
                android:id="@+id/et_once_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5px"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_once_pwd_hint"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/txt_login_hint"
                android:textSize="48px"/>

            <CheckBox
                android:id="@+id/cb_one_pwd"
                android:layout_width="120px"
                android:layout_height="120px"
                android:button="@drawable/cb_pwd"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5px"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_marginTop="20px"
            android:background="#343339"/>

        <Button
            android:id="@+id/btn_success"
            android:layout_width="match_parent"
            android:layout_height="154px"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_marginTop="25px"
            android:background="@color/btn_bg_color"
            android:text="@string/txt_success"
            android:textColor="@color/white"
            android:textSize="60px"/>


    </LinearLayout>



</LinearLayout>